Avoid unnecessary Boolean instantiation.